# nav_assiant

./: re_config.sh  readme.md
PID_Assiant/: CMakeLists.txt  readme.md
PID_Assiant/cmake/: qtermwidget5-targets.cmake
PID_Assiant/include/: mainwindow.h  pid_controller.h  types.h
PID_Assiant/src/: chart.cpp  mainwindow.cpp  robot_master.cpp  types.cpp
PID_Assiant/ui/: toolpage.ui
pid_sever/devel/: .catkin  local_setup.sh  setup.sh
pid_sever/devel/lib/pkgconfig/: sever.pc
pid_sever/devel/lib/sever/: node
pid_sever/devel/share/sever/cmake/: severConfig.cmake
pid_sever/src/sever/: CMakeLists.txt
pid_sever/src/sever/cmake/: readme
pid_sever/src/sever/include/: readme  types.h
pid_sever/src/sever/src/: main.cpp  readme  types.cpp
pid_sever/src/sever/ui/: readme
pid_sever/src/sever/ui_template/widget/: widget.ui
qtermwidget/: CMakeLists.txt
qtermwidget/examples/cpp/: main.cpp
qtermwidget/lib/: KeyboardTranslator.cpp  qtermwidget.cpp  tools.cpp
qtermwidget/lib/translations/: qtermwidget_zh_CN.ts
